# setuptools-conda

./: .gitignore  LICENSE.txt  README.md  dist_conda.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-release.yaml
setuptools_conda/: __init__.py  __main__.py  __version__.py  conda_build_config.yaml.template  fix_entry_points.py  meta.yaml.template  setuptools_conda.py
