[metadata]
name = setuptools_conda
description = Add a dist_conda command to your setup.py
long_description = file: README.md
long_description_content_type = text/markdown
author = Chris Billington
author_email = chrisjbillington@gmail.com
url = http://github.com/chrisjbillington/setuptools_conda
project_urls = 
    Source Code=https://github.com/chrisjbillington/setuptools_conda
    Download=https://github.com/chrisjbillington/setuptools_conda/releases
    Tracker=https://github.com/chrisjbillington/setuptools_conda/issues
keywords = build setuptools conda
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6
install_requires =
  setuptools_scm
  wheel
  importlib_metadata
  conda-build
  conda-verify
  distlib
setup_requires =
  setuptools_scm

[options.entry_points]
console_scripts =
  fix-gui-scripts = setuptools_conda:fix_gui_scripts

[dist_conda]
noarch = True
